aptosid-manual (02.16.2014.12.31-2) unstable; urgency=medium

  * drop Breaks with ancient tools.
  * drop explicit selection of xz to compress the packages, it's default now
    anyways.
  * allow parallel building.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 03 Jan 2015 03:47:08 +0100

aptosid-manual (02.16.2014.12.31-1) unstable; urgency=medium

  * New upstream release.
  * bump standards version to 3.9.6, no changes necessary.
  * assume maintainer role.
  * update copyright years.
  * debian/copyright: drop el/*.
  * debian/copyright: format license clarification as comment.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 01 Jan 2015 22:29:39 +0100

aptosid-manual (02.16.2014.12.15-1) unstable; urgency=medium

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 15 Dec 2014 23:17:02 +0100

aptosid-manual (02.16.2014.04.19-1) unstable; urgency=medium

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 19 Apr 2014 18:13:19 +0200

aptosid-manual (02.16.2014.01.23-2) unstable; urgency=medium

  * bump standards version to 3.9.5, no changes necessary.
  * debian/control: switch Vcs tags to github.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 13 Apr 2014 19:24:07 +0200

aptosid-manual (02.16.2014.01.23-1) unstable; urgency=low

  * New upstream release.
  * update debian/copyright.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 23 Jan 2014 22:06:03 +0100

aptosid-manual (02.16.2013.12.29-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 29 Dec 2013 16:48:01 +0100

aptosid-manual (02.16.2013.10.06-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 06 Oct 2013 23:33:03 +0200

aptosid-manual (02.16.2013.10.05-1) unstable; urgency=low

  * New upstream release.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 05 Oct 2013 16:09:59 +0200

aptosid-manual (02.16.2013.10.01-1) unstable; urgency=low
