@@ -2,7 +2,6 @@ Package: aptosid-manual-common
 Architecture: all
 Depends: ${misc:Depends}
 Recommends: www-browser | x-www-browser
-Breaks: aptosid-manual-reader (<< 0.2)
 Description: official aptosid manual - common files
  This manual is divided into common sections, for example, a subject pertaining
  to partitioning is found in Partitioning your Hard Drive, and topics regarding
