@@ -1,13 +1,12 @@
 Source: aptosid-manual
 Section: doc
 Priority: optional
-Maintainer: Kel Modderman <kel@otaku42.de>
-Uploaders: Joaquim Boura <x-un-i@aptosid.com>,
- Stefan Lippers-Hollmann <s.l-h@gmx.de>
+Maintainer: Stefan Lippers-Hollmann <s.l-h@gmx.de>
+Uploaders: Joaquim Boura <x-un-i@sapo.pt>
 Build-Depends: debhelper (>= 9.20120115),
  patchutils
-Standards-Version: 3.9.4
-Homepage: https://noc.aptosid.com/manual
-Vcs-Svn: svn://svn.berlios.de/fullstory/aptosid-manual/trunk
-Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/aptosid-manual/trunk/
+Standards-Version: 3.9.6
+Homepage: https://manual.aptosid.com/
+Vcs-git: git://github.com/fullstory/aptosid-manual.git
+Vcs-Browser: https://github.com/fullstory/aptosid-manual
 
