@@ -4,8 +4,9 @@ aptosid-manual (02.16.2014.12.31-2) unstable; urgency=medium
   * drop explicit selection of xz to compress the packages, it's default now
     anyways.
   * allow parallel building.
+  * sync bootstrap templates.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 03 Jan 2015 03:47:08 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 03 Jan 2015 03:51:24 +0100
 
 aptosid-manual (02.16.2014.12.31-1) unstable; urgency=medium
 
